Set the locale for potentially locale-dependent string manipulations